修改文件上传的逻辑