@@ -1,6 +1,8 @@
 package com.easyacg.image.service.impl;
 
 import cn.hutool.core.collection.CollectionUtil;
+import cn.hutool.core.io.FileUtil;
+import com.easyacg.core.contents.enums.BooleanEnum;
 import com.easyacg.core.entity.EasyacgException;
 import com.easyacg.image.constant.ImageFormatEnum;
 import com.easyacg.image.entity.input.MigrateInput;
@@ -10,16 +12,18 @@ import com.easyacg.image.entity.output.ImageVo;
 import com.easyacg.image.model.Image;
 import com.easyacg.image.repository.ImageRepository;
 import com.easyacg.image.service.ImageService;
+import com.easyacg.image.util.WebpUtil;
+import com.easyacg.storage.entity.input.file.PutObjectBo;
 import com.easyacg.storage.entity.output.FileInfoVo;
 import com.easyacg.storage.factory.StorageFactory;
 import com.easyacg.storage.model.Storage;
 import com.easyacg.storage.repository.StorageRepository;
-import com.easyacg.storage.service.FileService;
 import com.easyacg.storage.service.StorageService;
 import jakarta.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.dromara.mpe.bind.Binder;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -27,8 +31,10 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.text.SimpleDateFormat;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * @author brahma
@@ -36,6 +42,9 @@ import java.util.*;
 @Slf4j
 @Service
 public class ImageServiceImpl implements ImageService {
+    @Value("{ea.image.temp}")
+    private String tempPath;
+
     @Resource
     private ImageRepository imageRepository;
 
@@ -60,74 +69,61 @@ public class ImageServiceImpl implements ImageService {
         if (storage == null) {
             return Collections.emptyList();
         }
-        
+
         Binder.bindOn(storage, Storage::getImageList);
 
         List<Image> imageList = storage.getImageList();
         if (CollectionUtil.isEmpty(imageList)) {
             return Collections.emptyList();
         }
-        return imageList.stream().map(ImageVo::transfer).toList();
+        return imageList.stream().map(ImageVo::transfer).collect(Collectors.toList());
     }
 
     @Override
     public void uploadImage(MultipartFile file, UploadInput input) {
-        // 1. 文件校验
+        // 文件校验
         if (file.isEmpty()) {
             throw EasyacgException.build("上传文件为空");
         }
 
-        // 2. 获取文件信息
-        String originalFilename = file.getOriginalFilename();
-        String fileExtension = getFileExtension(originalFilename);
-        long size = file.getSize();
-
-        // 3. 校验文件类型
-        if (!ImageFormatEnum.isImage(fileExtension)) {
+        // 校验文件类型
+        String mimeType = FileUtil.getMimeType(file.getOriginalFilename());
+        if (!ImageFormatEnum.isImageByMimeType(mimeType)) {
             throw EasyacgException.build("不支持的文件类型");
         }
 
         try {
-            // 4. 生成新的文件名（避免文件名冲突）
-            String newFileName = generateUniqueFileName(originalFilename);
-
-            // 5. 构建保存路径
-            Path uploadPath = Paths.get(input.getPath()).toAbsolutePath().normalize();
-
-            // 6. 确保目录存在
-            Files.createDirectories(uploadPath);
-
-            // 7. 构建完整的文件路径
-            Path targetLocation = uploadPath.resolve(newFileName);
-
-            // 8. 保存文件
-            Storage storage = storageService.getStorageByName(input.getStorageName());
-            FileService service = StorageFactory.getService(storage.getMode());
-            service.putObject(file.getInputStream(), targetLocation);
+            // 构建临时文件并上传
+            String fileName = this.buildTempFileAndUpload(file, input);
         } catch (IOException e) {
             throw EasyacgException.build("UploadImage failed!!!", e);
         }
     }
 
-    /**
-     * 获取文件扩展名
-     */
-    private String getFileExtension(String filename) {
-        if (filename == null) {
-            return null;
-        }
-        int dotIndex = filename.lastIndexOf('.');
-        return (dotIndex == -1) ? "" : filename.substring(dotIndex + 1).toLowerCase();
-    }
 
-    /**
-     * 生成唯一文件名
-     */
-    private String generateUniqueFileName(String originalFilename) {
-        String extension = getFileExtension(originalFilename);
-        String timestamp = new SimpleDateFormat("yyyyMMddHHmmss").format(new Date());
-        String random = UUID.randomUUID().toString().substring(0, 8);
-        return String.format("%s_%s.%s", timestamp, random, extension);
+    private String buildTempFileAndUpload(MultipartFile file, UploadInput input) throws IOException {
+        Path tempFile = null;
+        try {
+            if (BooleanEnum.isTrue(input.getIsNeedLossy())) {
+                tempFile = WebpUtil.convertJpegToWebpWithLossyCompression(file);
+            } else {
+                tempFile = Files.createTempFile("", FileUtil.extName(file.getOriginalFilename()));
+                file.transferTo(tempFile);
+            }
+
+            // 构建保存路径
+            Path uploadPath = Paths.get(input.getPath()).normalize();
+
+            // 保存文件
+            Storage storage = storageService.getStorageByName(input.getStorageName());
+            PutObjectBo putObjectBo =
+                    PutObjectBo.builder().storage(storage).file(tempFile.toFile()).path(uploadPath).build();
+            return StorageFactory.getService(storage.getMode()).putObject(putObjectBo);
+        } finally {
+            if (tempFile != null) {
+                Files.delete(tempFile);
+            }
+        }
     }
 
     @Override
